kubernetes-manifests/coupon-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coupon
  labels:
    app: coupon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coupon
  template:
    metadata:
      labels:
        app: coupon
    spec:
      #      initContainers:
      #        - name: init-db-ready
      #          image: mongo:4
      #          command: ['/bin/sh', '-c']
      #          args:
      #            - echo "Waiting for mongodb at coupon-mongodb:27017 to go live before the BE...";
      #            - until (mongo --host coupon-mongodb:27017 >/dev/null) do echo "Waiting for connection for 2 sec."; sleep 2; done
      containers:
        - name: coupon-service
          image: coupon
          ports:
            - name: http-server
              containerPort: 80
          resources:
            limits:
              memory: 350Mi
---
apiVersion: v1
kind: Service
metadata:
  name: coupon
spec:
  selector:
    app: coupon
  ports:
    - port: 80
      targetPort: 80
