kubernetes-manifests/kafka-manager.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-manager
  namespace: default
spec:
  selector:
    app: kafka-manager
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-manager
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-manager
  template:
    metadata:
      labels:
        app: kafka-manager
    spec:
      containers:
        - name: kafka-manager
          image: solsson/kafka-manager
          ports:
            - containerPort: 80
          command:
            - ./bin/kafka-manager
            - -Dhttp.port=80
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 384Mi
