kubernetes-manifests/mall-composite.yaml
apiVersion: v1
kind: Service
metadata:
  name: mall-composite
spec:
  selector:
    app: mall-composite
  ports:
    - port: 80
      targetPort: 8088
#  type: NodePort # test!
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mall-composite-deployment
  labels:
    app: mall-composite
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mall-composite
  template:
    metadata:
      labels:
        app: mall-composite
    spec:
      containers:
        - name: mall-composite
          image: mall-composite
          ports:
            - containerPort: 8088
          resources:
            limits:
              memory: 350Mi
