kubernetes-manifests/order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order
  namespace: order-space
spec:
  selector:
    app: order
  ports:
    - port: 8087
      targetPort: 8077
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
  namespace: order-space
  labels:
    app: order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: order
          ports:
            - containerPort: 8077
          resources:
            limits:
              memory: 350Mi
